Split out sbt config into separate files, and put UI tests in their own root